book route created and successfully connected to mongoDB with book collection

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
   "version": "2.4.22",
   "description": "Libry backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -20,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.4.0",
     "nodemon": "^3.1.1"
   }
 }
